--- a/resource-definitions/terraform-driver/backends/account-config-aws.yaml
+++ b/resource-definitions/terraform-driver/backends/account-config-aws.yaml
@@ -4,9 +4,11 @@ metadata:
   id: account-config-aws
 entity:
   criteria:
+    # This res_id is used in the resource reference in the s3-backend Resource Definition.
     - res_id: aws-account
 
-  # Replace with your AWS Cloud Account
+  # The driver_account references a Cloud Account configured in the Platform Orchestrator.
+  # Replace with the name your AWS Cloud Account.
   driver_account: aws-credentials
 
   driver_inputs:
