Validated and documented credentials examples

--- a/resource-definitions/terraform-driver/credentials/account-config-gcp.yaml
+++ b/resource-definitions/terraform-driver/credentials/account-config-gcp.yaml
@@ -4,9 +4,11 @@ metadata:
   id: account-config-gcp
 entity:
   criteria:
+    # This res_id is used in the resource reference in the gcp-file-credentials Resource Definition.
     - res_id: gcp-account
 
-  # Replace with your GCP Cloud Account
+  # The driver_account references a Cloud Account configured in the Platform Orchestrator.
+  # Replace with the name your GCP Cloud Account.
   driver_account: gcp-credentials
 
   driver_inputs:
