--- a/resource-definitions/terraform-driver/credentials/aws-file-credentials.yaml
+++ b/resource-definitions/terraform-driver/credentials/aws-file-credentials.yaml
@@ -4,9 +4,10 @@ metadata:
   id: aws-file-credentials
 entity:
   driver_inputs:
-   secret_refs:
+    secret_refs:
       files:
         aws_creds:
+          # Using the "value" element of a secret reference to write a value.
           value: ${resources.config#aws-account.outputs.credentials_file}
     values:
       script: |-
@@ -50,4 +51,4 @@ entity:
   type: s3
 
   # Supply matching criteria
-  criteria: {}
+  criteria: []
