--- a/resource-definitions/terraform-driver/credentials/aws-provider-credentials.yaml
+++ b/resource-definitions/terraform-driver/credentials/aws-provider-credentials.yaml
@@ -4,8 +4,9 @@ metadata:
   id: aws-provider-credentials
 entity:
   driver_inputs:
-   secret_refs:
+    secret_refs:
       variables:
+        # Using the "value" element of secret references to write the values.
         aws_access_key_id:
           value: ${resources.config#aws-account.outputs.aws_access_key_id}
         aws_secret_access_key:
@@ -55,4 +56,4 @@ entity:
   type: s3
 
   # Supply matching criteria
-  criteria: {}
+  criteria: []
