--- a/resource-definitions/terraform-driver/credentials/gcp-file-credentials.yaml
+++ b/resource-definitions/terraform-driver/credentials/gcp-file-credentials.yaml
@@ -4,9 +4,10 @@ metadata:
   id: gcp-file-credentials
 entity:
   driver_inputs:
-   secret_refs:
+    secret_refs:
       files:
         credentials.json:
+          # Using the "value" element of a secret reference to write a value.
           value: ${resources.config#gcp-account.outputs.credentials_file}
     values:
       script: |-
@@ -42,10 +43,9 @@ entity:
       variables:
         location: US
         project_id: ${resources.config#gcp-account.outputs.project_id}
-    values:
   driver_type: humanitec/terraform
   name: gcp-file-credentials
   type: gcs
 
   # Supply matching criteria
-  criteria: {}
+  criteria: []
