Better show usage of dynamic credentials in TF example

--- a/resource-definitions/terraform-driver/dynamic-credentials/s3-dynamic-credentials.yaml
+++ b/resource-definitions/terraform-driver/dynamic-credentials/s3-dynamic-credentials.yaml
@@ -12,12 +12,6 @@ entity:
   driver_account: aws-temp-credentials
   driver_inputs:
     values:
-      script: |-
-        # ... Terraform code reduced for brevity
-
-        resource "aws_s3_bucket" "bucket" {
-          bucket = my-bucket
-        }
       variables:
         REGION: eu-central-1
       # Use the credentials injected via the driver_account
@@ -27,3 +21,19 @@ entity:
           ACCESS_KEY_ID: AccessKeyId
           ACCESS_KEY_VALUE: SecretAccessKey
           SESSION_TOKEN: SessionToken
+      script: |-
+        # This provider block is using the Terraform variables
+        # set through the credentials_config.
+        # Variable declarations omitted for brevity.
+        provider "aws" {
+          region     = var.REGION
+          access_key = var.ACCESS_KEY_ID
+          secret_key = var.ACCESS_KEY_VALUE
+          token      = var.SESSION_TOKEN
+        }
+
+        # ... Terraform code reduced for brevity
+
+        resource "aws_s3_bucket" "bucket" {
+          bucket = my-bucket
+        }
