fix: fixed up score example to meet spec

--- a/score/files/score.yaml
+++ b/score/files/score.yaml
@@ -8,7 +8,6 @@ containers:
     files:
       - target: /app/default.config
         mode: "0644"
-        content:
-          - |
-            [config]
-            key=value
+        content: |
+          [config]
+          key=value
