Fixing match-ref trigger expression
Co-authored-by: Ben Meier <1651305+astromechza@users.noreply.github.com>

--- a/pipelines/artefact-automation-pipelines/promote-between-environments-after-approval/pipeline.yaml
+++ b/pipelines/artefact-automation-pipelines/promote-between-environments-after-approval/pipeline.yaml
@@ -5,7 +5,7 @@ on:
     type: workload
     include:
     - myProject/myWorkloadArtefact
-    ref: refs/heads/main
+    match-ref: refs/heads/main
 
 permissions:
   application: developer
