Apply suggestions from code review
Co-authored-by: Tobias Babin <140624220+TobiasBabin@users.noreply.github.com>

--- a/resource-graph-patterns/proxy-resource/resource-definitions/s3-example-admin.yaml
+++ b/resource-graph-patterns/proxy-resource/resource-definitions/s3-example-admin.yaml
@@ -8,6 +8,7 @@ entity:
       app_id: example-proxy
   driver_inputs:
     values:
+      # This Resource reference to 's3.example' creates the dependency to the base resource
       bucket: ${resources['s3.example'].outputs.bucket}
   provision:
     aws-policy.s3-example-admin:
