--- a/resource-graph-patterns/proxy-resource/resource-definitions/aws-policy-s3-example-read-only.yaml
+++ b/resource-graph-patterns/proxy-resource/resource-definitions/aws-policy-s3-example-read-only.yaml
@@ -5,7 +5,7 @@ metadata:
 entity:
   criteria:
     - app_id: example-proxy
-      class: example-read-only
+      class: s3-example-read-only
   driver_inputs:
     values:
       arn: arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
