--- a/resource-graph-patterns/proxy-resource/resource-definitions/s3-example-admin.yaml
+++ b/resource-graph-patterns/proxy-resource/resource-definitions/s3-example-admin.yaml
@@ -4,8 +4,8 @@ metadata:
   id: s3-example-admin
 entity:
   criteria:
-    - class: example-admin
-      app_id: example-proxy
+    - app_id: example-proxy
+      class: example-admin
   driver_inputs:
     values:
       # This Resource reference to 's3.example' creates the dependency to the base resource
