--- a/resource-graph-patterns/proxy-resource/resource-definitions/s3-example.yaml
+++ b/resource-graph-patterns/proxy-resource/resource-definitions/s3-example.yaml
@@ -4,8 +4,8 @@ metadata:
   id: s3-example
 entity:
   criteria:
-    - class: example
-      app_id: example-proxy
+    - app_id: example-proxy
+      class: example
   driver_inputs:
     values:
       bucket: example-bucket
