update terraform credentials to support temporary creds

--- a/resource-definitions/terraform-driver/credentials/account-config-aws.yaml
+++ b/resource-definitions/terraform-driver/credentials/account-config-aws.yaml
@@ -13,14 +13,8 @@ entity:
 
   driver_inputs:
     values:
-      templates:
-        secrets: |
-          aws_access_key_id: {{ .driver.secrets.account.aws_access_key_id }}
-          aws_secret_access_key: {{ .driver.secrets.account.aws_secret_access_key }}
-          credentials_file: |
-            [default]
-            aws_access_key_id = {{ .driver.secrets.account.aws_access_key_id }}
-            aws_secret_access_key = {{ .driver.secrets.account.aws_secret_access_key }}
-  driver_type: humanitec/template
+      region: us-east-1
+
+  driver_type: humanitec/echo
   name: account-config-aws
   type: config
