--- a/resource-definitions/terraform-driver/credentials/account-config-gcp.yaml
+++ b/resource-definitions/terraform-driver/credentials/account-config-gcp.yaml
@@ -13,10 +13,8 @@ entity:
 
   driver_inputs:
     values:
-      templates:
-        secrets: |
-          credentials_file: {{ .driver.account | toJson | quote }}
-          project_id: {{ .driver.account.project_id | quote }}
-  driver_type: humanitec/template
+      location: US
+      project_id: my-gcp-prject
+  driver_type: humanitec/echo
   name: account-config-gcp
   type: config
