--- a/resource-definitions/terraform-driver/credentials/aws-environment-credentials.yaml
+++ b/resource-definitions/terraform-driver/credentials/aws-environment-credentials.yaml
@@ -1,15 +1,17 @@
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
-  id: aws-file-credentials
+  id: aws-environment-credentials
 entity:
+  # Use the same account as the config we're ma
+  driver_account: ${resources['config.default#aws-account'].account}
   driver_inputs:
-    secret_refs:
-      files:
-        aws_creds:
-          # Using the "value" element of a secret reference to write a value.
-          value: ${resources.config#aws-account.outputs.credentials_file}
     values:
+      credentials_config:
+        environment:
+          AWS_ACCESS_KEY_ID: "AccessKeyId"
+          AWS_SECRET_ACCESS_KEY: "SecretAccessKey"
+          AWS_SESSION_TOKEN: "SessionToken"
       script: |-
 
         variable "region" {}
@@ -23,12 +25,9 @@ entity:
         }
 
         provider "aws" {
-          region     = var.region
-
-          # The file is defined above. The provide will read the creds from this file.
-          shared_credentials_files = ["aws_creds"]
+          region = var.region
         }
-        
+
         output "bucket" {
           value = aws_s3_bucket.bucket.bucket
         }
@@ -38,16 +37,16 @@ entity:
         }
 
         resource "aws_s3_bucket" "bucket" {
-          bucket = "$\{replace("${context.res.id}", "^.*\.", "")}-standard-${context.env.id}-${context.app.id}-${context.org.id}"
+          bucket = "$\{replace("${context.res.id}", "/^.*\\./", "")}-standard-${context.env.id}-${context.app.id}-${context.org.id}"
           tags = {
             Humanitec = true
           }
         }
 
       variables:
-        region: us-east-1
+        region: ${resources['config.default#aws-account'].outputs.region}
   driver_type: humanitec/terraform
-  name: aws-file-credentials
+  name: aws-environment-credentials
   type: s3
 
   # Supply matching criteria
