--- a/resource-definitions/terraform-driver/credentials/aws-provider-credentials.yaml
+++ b/resource-definitions/terraform-driver/credentials/aws-provider-credentials.yaml
@@ -3,20 +3,27 @@ kind: Definition
 metadata:
   id: aws-provider-credentials
 entity:
+  # Use the same account as the config we're ma
+  driver_account: ${resources['config.default#aws-account'].account}
   driver_inputs:
-    secret_refs:
-      variables:
-        # Using the "value" element of secret references to write the values.
-        aws_access_key_id:
-          value: ${resources.config#aws-account.outputs.aws_access_key_id}
-        aws_secret_access_key:
-          value: ${resources.config#aws-account.outputs.aws_secret_access_key}
     values:
+      credentials_config:
+        variables:
+          access_key_id: "AccessKeyId"
+          secret_access_key: "SecretAccessKey"
+          session_token: "SessionToken"
       script: |-
 
+        variable "access_key_id" {
+          sensitive = true
+        }
+        variable "secret_access_key" {
+          sensitive = true
+        }
+        variable "session_token" {
+          sensitive = true
+        }
         variable "region" {}
-        variable "aws_access_key_id" {}
-        variable "aws_secret_access_key" {}
 
         terraform {
           required_providers {
@@ -28,12 +35,11 @@ entity:
 
         provider "aws" {
           region     = var.region
-
-          # The AWS provider allows for credentials to be defined on the provider itself
-          access_key = var.aws_access_key_id
-          secret_key = var.aws_secret_access_key
+          access_key = var.access_key_id
+          secret_key = var.secret_access_key
+          token      = var.session_token
         }
-        
+
         output "bucket" {
           value = aws_s3_bucket.bucket.bucket
         }
@@ -43,14 +49,14 @@ entity:
         }
 
         resource "aws_s3_bucket" "bucket" {
-          bucket = "$\{replace("${context.res.id}", "^.*\.", "")}-standard-${context.env.id}-${context.app.id}-${context.org.id}"
+          bucket = "$\{replace("${context.res.id}", "/^.*\\./", "")}-standard-${context.env.id}-${context.app.id}-${context.org.id}"
           tags = {
             Humanitec = true
           }
         }
 
       variables:
-        region: us-east-1
+        region: ${resources['config.default#aws-account'].outputs.region}
   driver_type: humanitec/terraform
   name: aws-provider-credentials
   type: s3
