--- a/resource-definitions/terraform-driver/credentials/gcp-file-credentials.yaml
+++ b/resource-definitions/terraform-driver/credentials/gcp-file-credentials.yaml
@@ -3,13 +3,11 @@ kind: Definition
 metadata:
   id: gcp-file-credentials
 entity:
+  driver_account: ${resources['config.default#gcp-account'].account}
   driver_inputs:
-    secret_refs:
-      files:
-        credentials.json:
-          # Using the "value" element of a secret reference to write a value.
-          value: ${resources.config#gcp-account.outputs.credentials_file}
     values:
+      credentials_config:
+        file: credentials.json
       script: |-
 
         variable "project_id" {}
@@ -22,7 +20,6 @@ entity:
             }
           }
         }
-
         provider "google" {
           project     = var.project_id
 
@@ -35,14 +32,15 @@ entity:
         }
 
         resource "google_storage_bucket" "bucket" {
-          name          = "$\{replace("${context.res.id}", "^.*\.", "")}-standard-${context.env.id}-${context.app.id}-${context.org.id}"
+          name          = "$\{replace("${context.res.id}", "/^.*\\./", "")}-standard-${context.env.id}-${context.app.id}-${context.org.id}"
           location      = var.location
           force_destroy = true
         }
 
       variables:
-        location: US
+        location: ${resources.config#gcp-account.outputs.location}
         project_id: ${resources.config#gcp-account.outputs.project_id}
+
   driver_type: humanitec/terraform
   name: gcp-file-credentials
   type: gcs
