--- a/resource-graph-patterns/delegator-resource/resource-definitions/aws-policy-s3-example-admin.yaml
+++ b/resource-graph-patterns/delegator-resource/resource-definitions/aws-policy-s3-example-admin.yaml
@@ -4,7 +4,7 @@ metadata:
   id: aws-policy-s3-example-admin
 entity:
   criteria:
-    - app_id: example-proxy
+    - app_id: example-delegator
       class: s3-example-admin
   driver_inputs:
     values:
