Added AKS cloud account usage, fixed max length on driver_account

--- a/resource-definitions/k8s-cluster-eks/static-credentials/eks-static-credentials.yaml
+++ b/resource-definitions/k8s-cluster-eks/static-credentials/eks-static-credentials.yaml
@@ -15,5 +15,5 @@ entity:
       loadbalancer_hosted_zone: ABC0DEF5WYYZ00
     secrets:
       credentials: 
-        aws_access_key_id: ${AWS_ACCESS_KEY}
-        aws_secret_access_key: ${AWS_ACCESS_SECRET}
+        aws_access_key_id: ${AWS_ACCESS_KEY_ID}
+        aws_secret_access_key: ${AWS_SECRET_ACCESS_KEY}
