--- a/resource-definitions/terraform-driver/dynamic-credentials/s3-dynamic-credentials.yaml
+++ b/resource-definitions/terraform-driver/dynamic-credentials/s3-dynamic-credentials.yaml
@@ -9,7 +9,7 @@ entity:
   driver_type: humanitec/terraform
   # The driver_account references a Cloud Account of type "aws-role"
   # which needs to be configured for your Organization.
-  driver_account: aws-temp-credentials
+  driver_account: aws-temp-creds
   driver_inputs:
     values:
       variables:
