--- a/resource-definitions/k8s-cluster-eks/dynamic-credentials/eks-dynamic-credentials.yaml
+++ b/resource-definitions/k8s-cluster-eks/dynamic-credentials/eks-dynamic-credentials.yaml
@@ -8,7 +8,7 @@ entity:
   type: k8s-cluster
   # The driver_account references a Cloud Account of type "aws-role"
   # which needs to be configured for your Organization.
-  driver_account: aws-temp-credentials
+  driver_account: aws-temp-creds
   # The driver_type k8s-cluster-eks automatically handles the dynamic credentials
   # injected via the driver_account.
   driver_type: humanitec/k8s-cluster-eks
