--- a/resource-definitions/k8s-cluster-eks/static-credentials/eks-static-credentials-cloudaccount.yaml
+++ b/resource-definitions/k8s-cluster-eks/static-credentials/eks-static-credentials-cloudaccount.yaml
@@ -8,7 +8,7 @@ entity:
   type: k8s-cluster
   # The driver_account references a Cloud Account of type "aws"
   # which needs to be configured for your Organization.
-  driver_account: aws-static-credentials
+  driver_account: aws-static-creds
   # The driver_type k8s-cluster-eks automatically handles the static credentials
   # injected via the driver_account.
   driver_type: humanitec/k8s-cluster-eks
