Adjusted naming of cluster ResDefs using Cloud Account

--- a/resource-definitions/k8s-cluster-aks/static-credentials/aks-static-credentials-cloudaccount.yaml
+++ b/resource-definitions/k8s-cluster-aks/static-credentials/aks-static-credentials-cloudaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
-  id: aks-static-credentials
+  id: aks-static-credentials-cloudaccount
 entity:
-  name: aks-static-credentials
+  name: aks-static-credentials-cloudaccount
   type: k8s-cluster
   # The driver_account references a Cloud Account of type "azure"
   # which needs to be configured for your Organization.
