--- a/resource-definitions/k8s-cluster-eks/static-credentials/eks-static-credentials-cloudaccount.yaml
+++ b/resource-definitions/k8s-cluster-eks/static-credentials/eks-static-credentials-cloudaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
-  id: eks-static-credentials
+  id: eks-static-credentials-cloudaccount
 entity:
-  name: eks-static-credentials
+  name: eks-static-credentials-cloudaccount
   type: k8s-cluster
   # The driver_account references a Cloud Account of type "aws"
   # which needs to be configured for your Organization.
