--- a/resource-definitions/k8s-cluster-gke/static-credentials/gke-static-credentials-cloudaccount.yaml
+++ b/resource-definitions/k8s-cluster-gke/static-credentials/gke-static-credentials-cloudaccount.yaml
@@ -3,9 +3,9 @@
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
-  id: gke-static-credentials
+  id: gke-static-credentials-cloudaccount
 entity:
-  name: gke-static-credentials
+  name: gke-static-credentials-cloudaccount
   type: k8s-cluster
   # The driver_account references a Cloud Account of type "gcp"
   # which needs to be configured for your Organization.
