Changed deploy-to-production to wait for approval

--- a/pipelines/artefact-automation-pipelines/promote-between-environments-after-approval/pipeline.yaml
+++ b/pipelines/artefact-automation-pipelines/promote-between-environments-after-approval/pipeline.yaml
@@ -45,7 +45,7 @@ jobs:
 
   deploy-to-production:
     needs:
-    - deploy-to-production
+    - wait-for-approval
     steps:
     - uses: actions/humanitec/create-delta@v1
       id: create
