Fixed "workload_artefacts" input
Co-authored-by: Ben Meier <1651305+astromechza@users.noreply.github.com>

--- a/pipelines/artefact-automation-pipelines/promote-between-environments-after-approval/pipeline.yaml
+++ b/pipelines/artefact-automation-pipelines/promote-between-environments-after-approval/pipeline.yaml
@@ -61,4 +61,4 @@ jobs:
       with:
         env_id: production
         set_id: ${{ steps.apply.outputs.set_id }}
-        comment: Deploying ${{ inputs.workloads[0] }}
+        comment: Deploying ${{ inputs.workload_artefacts[0] }}
