--- a/pipelines/artefact-automation-pipelines/promote-between-environments-after-approval/pipeline.yaml
+++ b/pipelines/artefact-automation-pipelines/promote-between-environments-after-approval/pipeline.yaml
@@ -11,7 +11,7 @@ permissions:
   application: developer
   env-types:
     development: deployer
-    staging: deployer
+    production: deployer
 
 jobs:
   deploy-to-dev:
@@ -30,7 +30,7 @@ jobs:
       with:
         env_id: development
         set_id: ${{ steps.apply.outputs.set_id }}
-        comment: Deploying ${{ inputs.workloads[0] }}
+        comment: Deploying ${{ inputs.workload_artefacts[0] }}
 
   wait-for-approval:
     # increase the timeout to 24 hours for this job
@@ -41,7 +41,7 @@ jobs:
     - uses: actions/humanitec/approve@v1
       with:
         env_id: production
-        message: Promotion of ${{ inputs.workloads[0] }} to production
+        message: Promotion of ${{ inputs.workload_artefacts[0] }} to production
 
   deploy-to-production:
     needs:
@@ -51,7 +51,7 @@ jobs:
       id: create
       with:
         env_id: production
-        workloads: ${{ inputs.workloads }}
+        workload_artefacts: ${{ inputs.workload_artefacts }}
     - uses: actions/humanitec/apply@v1
       id: apply
       with:
