Correcting input to Deployment Pipeline example

--- a/pipelines/deployment-pipelines/prevent-direct-deployment-to-production/pipeline.yaml
+++ b/pipelines/deployment-pipelines/prevent-direct-deployment-to-production/pipeline.yaml
@@ -8,4 +8,4 @@ jobs:
     steps:
     - uses: actions/humanitec/fail@v1
       with:
-        message: Direct deployment to ${{ inputs.environment }} is not allowed.
+        message: Direct deployment to ${{ inputs.env_id }} is not allowed.
