Add concurrency group to "Approval" pipeline

--- a/pipelines/artefact-automation-pipelines/promote-between-environments-after-approval/pipeline.yaml
+++ b/pipelines/artefact-automation-pipelines/promote-between-environments-after-approval/pipeline.yaml
@@ -7,6 +7,9 @@ on:
     - myProject/myWorkloadArtefact
     match-ref: refs/heads/main
 
+concurrency:
+  group: myGroup
+
 permissions:
   application: developer
   env-types:
