--- a/resource-graph-patterns/delegator-resource/resource-definitions/aws-policy-s3-read-only.yaml
+++ b/resource-graph-patterns/delegator-resource/resource-definitions/aws-policy-s3-read-only.yaml
@@ -1,14 +1,15 @@
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
-  id: aws-policy-s3-example-read-only
+  id: aws-policy-s3-read-only
 entity:
   criteria:
     - app_id: example-delegator
-      class: s3-example-read-only
+      class: s3-read-only
   driver_inputs:
     values:
       arn: arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
+  # In a real-world scenario, a different Driver would be used for this resource, e.g. Terraform
   driver_type: humanitec/echo
-  name: aws-policy-s3-example-read-only
+  name: aws-policy-s3-read-only
   type: aws-policy
