Adding Kubernetes Agent examples and Terraform variants

--- a/resource-definitions/k8s-cluster-aks/static-credentials/aks-static-credentials.yaml
+++ b/resource-definitions/k8s-cluster-aks/static-credentials/aks-static-credentials.yaml
@@ -1,4 +1,5 @@
-
+# NOTE: Providing inline credentials as shown in this example is discouraged and will be deprecated.
+# Using a Cloud Account is the recommended approach instead.
 # Make sure all ${ENVIRONMENT_VARIABLES} are set when applying this Resource Definition.
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
