--- a/resource-definitions/k8s-cluster-gke/dynamic-credentials/gke-dynamic-credentials.yaml
+++ b/resource-definitions/k8s-cluster-gke/dynamic-credentials/gke-dynamic-credentials.yaml
@@ -2,9 +2,9 @@
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
-  id: gke-dynamic-credentials-cloudaccount
+  id: gke-dynamic-credentials
 entity:
-  name: gke-dynamic-credentials-cloudaccount
+  name: gke-dynamic-credentials
   type: k8s-cluster
   # The driver_account references a Cloud Account of type "gcp-identity"
   # which needs to be configured for your Organization.
