--- a/resource-definitions/k8s-cluster-eks/agent/eks-agent.yaml
+++ b/resource-definitions/k8s-cluster-eks/agent/eks-agent.yaml
@@ -1,4 +1,5 @@
-# Connect to an EKS cluster using dynamic credentials defined via a Cloud Account
+# EKS private cluster. It is to be accessed via the Humanitec Agent
+# It is using a Cloud Account with dynamic credentials
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
