--- a/resource-definitions/k8s-cluster-gke/agent/gke-agent.yaml
+++ b/resource-definitions/k8s-cluster-gke/agent/gke-agent.yaml
@@ -1,4 +1,4 @@
-# EKS private cluster. It is to be accessed via the Humanitec Agent
+# GKE private cluster. It is to be accessed via the Humanitec Agent
 # It is using a Cloud Account with dynamic credentials
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
