Adding TF example for generic k8s

--- a/resource-definitions/k8s-cluster/static-credentials/generic-k8s-client-certificate.yaml
+++ b/resource-definitions/k8s-cluster/static-credentials/generic-k8s-client-certificate.yaml
@@ -1,3 +1,4 @@
+# Resource Definition for a generic Kubernetes cluster
 # Make sure all ${ENVIRONMENT_VARIABLES} are set when applying this Resource Definition.
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
