Terraform driver example with GCP dynamic credentials

--- a/resource-definitions/terraform-driver/dynamic-credentials/s3-dynamic-credentials.yaml
+++ b/resource-definitions/terraform-driver/dynamic-credentials/s3-dynamic-credentials.yaml
@@ -1,4 +1,4 @@
-# Connect to an EKS cluster using dynamic credentials defined via a Cloud Account
+# Create S3 bucket using dynamic credentials defined via a Cloud Account
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
