Remove extra backslack from resource-definitions/template-driver/imagepullsecrets/workload.yaml
Co-authored-by: Mathieu Benoit <mathieu.benoit@humanitec.com>

--- a/resource-definitions/template-driver/imagepullsecrets/workload.yaml
+++ b/resource-definitions/template-driver/imagepullsecrets/workload.yaml
@@ -16,4 +16,4 @@ entity:
             - op: add
               path: /spec/imagePullSecrets
               value:
-                - name: \${resources["config.default#regcred"].outputs.secret_name}
+                - name: ${resources["config.default#regcred"].outputs.secret_name}
