Fixed format of manifests in serviceaccount def

--- a/resource-definitions/template-driver/serviceaccount/cli-serviceaccount-k8ssa-def.yaml
+++ b/resource-definitions/template-driver/serviceaccount/cli-serviceaccount-k8ssa-def.yaml
@@ -16,10 +16,10 @@ entity:
           name: {{ index (splitList "." "${context.res.id}") 1 }}
         outputs: |
           name: {{ .init.name }}
-        manifests: |
+        manifests: |-
           service-account.yaml:
             location: namespace
-            data: |
+            data:
               apiVersion: v1
               kind: ServiceAccount
               metadata:
