Fixed typos in the credentials examples

--- a/resource-definitions/terraform-driver/credentials/aws-provider-credentials.yaml
+++ b/resource-definitions/terraform-driver/credentials/aws-provider-credentials.yaml
@@ -3,7 +3,7 @@ kind: Definition
 metadata:
   id: aws-provider-credentials
 entity:
-  # Use the same account as the config we're ma
+  # Use the account provided by the config resource
   driver_account: ${resources['config.default#aws-account'].account}
   driver_inputs:
     values:
