--- a/resource-definitions/terraform-driver/credentials/azure-blob-storage-temporary-credentials.yaml
+++ b/resource-definitions/terraform-driver/credentials/azure-blob-storage-temporary-credentials.yaml
@@ -1,15 +1,15 @@
-# Create Azure Blob Storage container using dynamic credentials defined via a Cloud Account
+# Create Azure Blob Storage container using temporary credentials defined via a Cloud Account
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
-  id: blob-storage-dynamic-credentials
+  id: blob-storage-temporary-credentials
 entity:
-  name: blob-storage-dynamic-credentials
+  name: blob-storage-temporary-credentials
   type: azure-blob
   driver_type: humanitec/terraform
   # The driver_account references a Cloud Account of type "azure-identity"
   # which needs to be configured for your Organization.
-  driver_account: azure-dynamic-creds
+  driver_account: azure-temporary-creds
   driver_inputs:
     values:
       variables:
