--- a/resource-definitions/terraform-driver/credentials/gcs-temporary-credentials.yaml
+++ b/resource-definitions/terraform-driver/credentials/gcs-temporary-credentials.yaml
@@ -1,15 +1,15 @@
-# Create Google Cloud Storage bucket using dynamic credentials defined via a Cloud Account
+# Create Google Cloud Storage bucket using temporary credentials defined via a Cloud Account
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
-  id: gcs-dynamic-credentials
+  id: gcs-temporary-credentials
 entity:
-  name: gcs-dynamic-credentials
+  name: gcs-temporary-credentials
   type: gcs
   driver_type: humanitec/terraform
   # The driver_account references a Cloud Account of type "gcp-identity"
   # which needs to be configured for your Organization.
-  driver_account: gcp-dynamic-creds
+  driver_account: gcp-temporary-creds
   driver_inputs:
     values:
       variables:
