--- a/resource-definitions/terraform-driver/credentials/s3-temporary-credentials.yaml
+++ b/resource-definitions/terraform-driver/credentials/s3-temporary-credentials.yaml
@@ -1,10 +1,10 @@
-# Create S3 bucket using dynamic credentials defined via a Cloud Account
+# Create S3 bucket using temporary credentials defined via a Cloud Account
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
-  id: s3-dynamic-credentials
+  id: s3-temporary-credentials
 entity:
-  name: s3-dynamic-credentials
+  name: s3-temporary-credentials
   type: s3
   driver_type: humanitec/terraform
   # The driver_account references a Cloud Account of type "aws-role"
