--- a/resource-definitions/k8s-cluster-eks/credentials/eks-temporary-credentials.yaml
+++ b/resource-definitions/k8s-cluster-eks/credentials/eks-temporary-credentials.yaml
@@ -1,15 +1,15 @@
-# Connect to an EKS cluster using dynamic credentials defined via a Cloud Account
+# Connect to an EKS cluster using temporary credentials defined via a Cloud Account
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
-  id: eks-dynamic-credentials
+  id: eks-temporary-credentials
 entity:
-  name: eks-dynamic-credentials
+  name: eks-temporary-credentials
   type: k8s-cluster
   # The driver_account references a Cloud Account of type "aws-role"
   # which needs to be configured for your Organization.
   driver_account: aws-temp-creds
-  # The driver_type k8s-cluster-eks automatically handles the dynamic credentials
+  # The driver_type k8s-cluster-eks automatically handles the temporary credentials
   # injected via the driver_account.
   driver_type: humanitec/k8s-cluster-eks
   driver_inputs:
