--- a/resource-definitions/k8s-cluster-gke/credentials/gke-temporary-credentials.yaml
+++ b/resource-definitions/k8s-cluster-gke/credentials/gke-temporary-credentials.yaml
@@ -1,14 +1,14 @@
-# Connect to a GKE cluster using dynamic credentials defined via a Cloud Account
+# Connect to a GKE cluster using temporary credentials defined via a Cloud Account
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
-  id: gke-dynamic-credentials
+  id: gke-temporary-credentials
 entity:
-  name: gke-dynamic-credentials
+  name: gke-temporary-credentials
   type: k8s-cluster
   # The driver_account references a Cloud Account of type "gcp-identity"
   # which needs to be configured for your Organization.
-  driver_account: gcp-dynamic-creds
+  driver_account: gcp-temporary-creds
   driver_type: humanitec/k8s-cluster-gke
   driver_inputs:
     values:
