--- a/resource-graph-patterns/break-a-loop-additional-resource/def-k8s-service-account.yaml
+++ b/resource-graph-patterns/break-a-loop-additional-resource/def-k8s-service-account.yaml
@@ -7,8 +7,8 @@ entity:
     - app_id: example-break-a-loop-additional-resource
   driver_inputs:
     values:
-      role_arn: ${resources["config.sa-name-role-id"].outputs.role_arn}
-      sa_name: ${resources["config.sa-name-role-id"].outputs.sa_name}
+      role_arn: ${resources['config.sa-name-role-id'].outputs.role_arn}
+      sa_name: ${resources['config.sa-name-role-id'].outputs.sa_name}
       templates:
         outputs: |
           name: {{ .driver.values.sa_name }}
