Removed env var usage from Resource Definition YAMLs

--- a/resource-definitions/k8s-cluster-eks/credentials/eks-static-credentials.yaml
+++ b/resource-definitions/k8s-cluster-eks/credentials/eks-static-credentials.yaml
@@ -1,6 +1,5 @@
 # NOTE: Providing inline credentials as shown in this example is discouraged and will be deprecated.
 # Using a Cloud Account is the recommended approach instead.
-# Make sure all ${ENVIRONMENT_VARIABLES} are set when applying this Resource Definition.
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
@@ -17,5 +16,5 @@ entity:
       loadbalancer_hosted_zone: ABC0DEF5WYYZ00
     secrets:
       credentials: 
-        aws_access_key_id: ${AWS_ACCESS_KEY_ID}
-        aws_secret_access_key: ${AWS_SECRET_ACCESS_KEY}
+        aws_access_key_id: my-access-key-id
+        aws_secret_access_key: my-secret-access-key
