--- a/resource-definitions/k8s-cluster-git/credentials/github-for-gitops.yaml
+++ b/resource-definitions/k8s-cluster-git/credentials/github-for-gitops.yaml
@@ -18,6 +18,6 @@ entity:
       loadbalancer: 35.10.10.10
     secrets:
       credentials:
-        ssh_key: ${GIT_SSH_KEY}
+        ssh_key: my-git-ssh-key
         # Alternative to ssh_key: password or Personal Account Token
-        # password: ${GIT_PAT}
+        # password: my-git-ssh-pat
