--- a/resource-definitions/k8s-cluster/credentials/generic-k8s-client-certificate.yaml
+++ b/resource-definitions/k8s-cluster/credentials/generic-k8s-client-certificate.yaml
@@ -1,5 +1,4 @@
 # Resource Definition for a generic Kubernetes cluster
-# Make sure all ${ENVIRONMENT_VARIABLES} are set when applying this Resource Definition.
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
@@ -15,10 +14,10 @@ entity:
       cluster_data:
         server: https://35.11.11.11:6443
         # Single line base64-encoded cluster CA data in the format "LS0t...ca-data....=="
-        certificate-authority-data: ${CLUSTER_CERTIFICATE_CA_DATA}
+        certificate-authority-data: "LS0t...ca-data....=="
     secrets:
       credentials:
         # Single line base64-encoded client certificate data in the format "LS0t...cert-data...=="
-        client-certificate-data: ${USER_CLIENT_CERTIFICATE_DATA}
+        client-certificate-data: "LS0t...cert-data...=="
         # Single line base64-encoded client key data in the format "LS0t...key-data...=="
-        client-key-data: ${USER_CLIENT_KEY_DATA}
+        client-key-data: "LS0t...key-data...=="
