--- a/resource-definitions/k8s-cluster-aks/credentials/aks-static-credentials.yaml
+++ b/resource-definitions/k8s-cluster-aks/credentials/aks-static-credentials.yaml
@@ -1,6 +1,5 @@
 # NOTE: Providing inline credentials as shown in this example is discouraged and will be deprecated.
 # Using a Cloud Account is the recommended approach instead.
-# Make sure all ${ENVIRONMENT_VARIABLES} are set when applying this Resource Definition.
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
@@ -16,12 +15,12 @@ entity:
       resource_group: my-resources
       subscription_id: 12345678-aaaa-bbbb-cccc-0987654321ba
       # Add this exact server_app_id for a cluster using AKS-managed Entra ID integration
-      # server_app_id: 6dae42f8-4368-4678-94ff-3960e28e3630
+      server_app_id: 6dae42f8-4368-4678-94ff-3960e28e3630
     secrets:
       # The "credentials" data correspond to the content of the output
       # that Azure generates for a service principal
       credentials:
         appId: b520e4a8-6cb4-49dc-8f42-f3281dc2efe9
         displayName: my-cluster-sp
-        password: ${SERVICE_PRINCIPAL_PASSWORD}
+        password: my-cluster-sp-pw
         tenant: 9b8c7b62-aaaa-4444-ffff-0987654321fd
