Removed chomping indicators from ResDef YAMLs and re-generated TF variants

--- a/resource-definitions/template-driver/labels/custom-namespace-with-dynamic-labels.yaml
+++ b/resource-definitions/template-driver/labels/custom-namespace-with-dynamic-labels.yaml
@@ -13,7 +13,7 @@ entity:
       templates:
         init: |
           name: ${context.app.id}-${context.env.id}
-        manifests: |-
+        manifests: |
           namespace.yaml:
             location: cluster
             data:
