--- a/resource-definitions/terraform-driver/credentials/aws-environment-credentials.yaml
+++ b/resource-definitions/terraform-driver/credentials/aws-environment-credentials.yaml
@@ -12,7 +12,7 @@ entity:
           AWS_ACCESS_KEY_ID: "AccessKeyId"
           AWS_SECRET_ACCESS_KEY: "SecretAccessKey"
           AWS_SESSION_TOKEN: "SessionToken"
-      script: |-
+      script: |
 
         variable "region" {}
 
