--- a/resource-definitions/terraform-driver/credentials/aws-provider-credentials.yaml
+++ b/resource-definitions/terraform-driver/credentials/aws-provider-credentials.yaml
@@ -12,7 +12,7 @@ entity:
           access_key_id: "AccessKeyId"
           secret_access_key: "SecretAccessKey"
           session_token: "SessionToken"
-      script: |-
+      script: |
 
         variable "access_key_id" {
           sensitive = true
