--- a/resource-definitions/terraform-driver/credentials/azure-blob-storage-dynamic-credentials.yaml
+++ b/resource-definitions/terraform-driver/credentials/azure-blob-storage-dynamic-credentials.yaml
@@ -25,7 +25,7 @@ entity:
       credentials_config:
         variables:
           oidc_token: oidc_token
-      script: |-
+      script: |
         # This provider block is using the Terraform variables
         # set through the credentials_config.
         # Variable declarations omitted for brevity.
