--- a/resource-definitions/terraform-driver/credentials/gcp-file-credentials.yaml
+++ b/resource-definitions/terraform-driver/credentials/gcp-file-credentials.yaml
@@ -8,7 +8,7 @@ entity:
     values:
       credentials_config:
         file: credentials.json
-      script: |-
+      script: |
 
         variable "project_id" {}
         variable "location" {}
