--- a/resource-definitions/terraform-driver/credentials/gcs-dynamic-credentials.yaml
+++ b/resource-definitions/terraform-driver/credentials/gcs-dynamic-credentials.yaml
@@ -20,7 +20,7 @@ entity:
       credentials_config:
         variables:
           access_token: access_token
-      script: |-
+      script: |
         # This provider block is using the Terraform variables
         # set through the credentials_config.
         # Variable declarations omitted for brevity.
