--- a/resource-definitions/terraform-driver/credentials/s3-dynamic-credentials.yaml
+++ b/resource-definitions/terraform-driver/credentials/s3-dynamic-credentials.yaml
@@ -21,7 +21,7 @@ entity:
           ACCESS_KEY_ID: AccessKeyId
           ACCESS_KEY_VALUE: SecretAccessKey
           SESSION_TOKEN: SessionToken
-      script: |-
+      script: |
         # This provider block is using the Terraform variables
         # set through the credentials_config.
         # Variable declarations omitted for brevity.
