Uncommented the recommended server_app_id setting for AKS

--- a/resource-definitions/k8s-cluster-aks/credentials/aks-dynamic-credentials.yaml
+++ b/resource-definitions/k8s-cluster-aks/credentials/aks-dynamic-credentials.yaml
@@ -17,4 +17,4 @@ entity:
       resource_group: my-resources
       subscription_id: 12345678-aaaa-bbbb-cccc-0987654321ba
       # Add this exact server_app_id for a cluster using AKS-managed Entra ID integration
-      # server_app_id: 6dae42f8-4368-4678-94ff-3960e28e3630
+      server_app_id: 6dae42f8-4368-4678-94ff-3960e28e3630
