fix: error with placeholder in aws-policy-co-provision

--- a/resource-definitions/terraform-driver/co-provision/aws-policy-co-provision.yaml
+++ b/resource-definitions/terraform-driver/co-provision/aws-policy-co-provision.yaml
@@ -31,7 +31,7 @@ entity:
         # ... Terraform code reduced for brevity
 
         resource "aws_iam_policy" "bucket" {
-          name        = "${var.BUCKET}-policy"
+          name        = "$\{var.BUCKET}-policy"
           policy      = data.aws_iam_policy_document.main.json
         }
   
