Adjust Score serviceaccount example

--- a/score/serviceaccount/humanitec.score.yaml
+++ b/score/serviceaccount/humanitec.score.yaml
@@ -1,4 +1,5 @@
 apiVersion: humanitec.org/v1b1
 
 spec:
-  serviceAccountName: data-access-service-account
+  pod:
+    serviceAccountName: data-access-service-account
