Adjusted Pod tolerations example to use pod feature

--- a/score/tolerations/humanitec.score.yaml
+++ b/score/tolerations/humanitec.score.yaml
@@ -1,7 +1,8 @@
 apiVersion: humanitec.org/v1b1
 
 spec:
-  tolerations:
-  - key: "my-example-key"
-    operator: "Exists"
-    effect: "NoSchedule"
+  pod:
+    tolerations:
+    - key: "my-example-key"
+      operator: "Exists"
+      effect: "NoSchedule"
