Added CronJobs example

--- a/score/cronjobs/score.yaml
+++ b/score/cronjobs/score.yaml
@@ -5,4 +5,5 @@ metadata:
 
 containers:
   main-container:
-    image: registry/my-image:1.0.0
+    #image: registry/my-image:1.0.0
+    image: nginx
