Reverted to demo image name

--- a/score/jobs/score.yaml
+++ b/score/jobs/score.yaml
@@ -5,5 +5,4 @@ metadata:
 
 containers:
   main-container:
-    #image: registry/my-image:1.0.0
-    image: nginx
+    image: registry/my-image:1.0.0
