--- a/score/jobs/humanitec.score.yaml
+++ b/score/jobs/humanitec.score.yaml
@@ -1,5 +1,5 @@
 apiVersion: humanitec.org/v1b1
-# Select the "default-job" Workload Profile
+# Select the "default-job" bulit-in Workload Profile
 profile: humanitec/default-job
 
 spec:
@@ -9,13 +9,16 @@ spec:
       jobannotationkey: jobannotationvalue
     labels:
       joblabelkey: joblabelvalue
+    # Set properties of the JobSpec, e.g.:
+    activeDeadlineSeconds: 30
+    ttlSecondsAfterFinished: 3600
   pod:
     # Set Pod annotations and labels in Pod metadata
     annotations:
       podannotationkey: podannotationvalue
     labels:
       podlabelkey: podlabelvalue
-    # Set any property of the PodSpec except "containers", e.g.:
+    # Set properties of the PodSpec, e.g.:
     nodeSelector:
       topology.kubernetes.io/region: europe-west3
     os:
