--- a/resource-definitions/template-driver/labels/custom-workload-with-dynamic-labels.yaml
+++ b/resource-definitions/template-driver/labels/custom-workload-with-dynamic-labels.yaml
@@ -21,6 +21,7 @@ entity:
                 {{- end }}
                 env_id: ${context.env.id}
                 cost_center_id: ${resources['config.default#app-config'].outputs.cost_center_id}
+            # If the Score file also defines a service, add labels to the service object
             {{- if .resource.spec.service }}
             - op: add
               path: /spec/service/labels
